added one more fruit and sport

--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -17,6 +17,7 @@
 <li>oranges</li>
 <li>apples</li>
 <li>grapes</li>
+<li>blueberrys</li>
 
 this is important
 </ul>
@@ -28,6 +29,7 @@ this is important
 <li>baseball</li>
 <li>football</li>
 <li>soccer</li>
+<li>figure skating</li>
 
 </ol>
     
